# myorigin

./: -  README.md  README.py  main.py  setup.cfg
.github/workflows/: codeql-analysis.yml
src/grep_ips/: __init__.py  grep_ips.py  grep_ips_test.py
src/myorigin/: __init__.py  flock_data.py  myorigin.py  myorigin_test.py  parrots.py
tests/: test_client.py  test_server.py
