[metadata]
name = myorigin
version = 0.3.3
author = bitinerant
author_email = bitinerant@users.noreply.github.com
description = Fast, fault-tolerant public IP address retrieval from Python or CLI.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bitinerant/myorigin
project_urls =
    Bug Tracker = https://github.com/bitinerant/myorigin/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    aiohttp
    sqlmodel
    platformdirs

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    myorigin = myorigin.myorigin:cli
